assets/css/landscape.css
/* Page structure */

* {
  pointer-events: auto;
}

body {
  min-height: calc(100vh - 4rem);

  display: grid;
  grid-template-columns: repeat(4, 1fr) [right] 1fr;
  grid-column-gap: 2rem;
  grid-auto-flow: column;

  pointer-events: none;
}



/* Nav lists */

nav#masthead {
  grid-column-start: right;
  align-self: start;
  text-align: right;
  /* text-transform: lowercase; */
}

nav#projects {
  grid-row-end: span 3;
}

nav#projects li.viewing {
  margin: 2rem 0;
}

nav#projects li:first-of-type {
  /* corrects double margin in first project */
  margin-top: 0;
}

nav#page-images {
  grid-column-start: right;
  align-self: center;

  font-size: 1.5rem;
  line-height: 1;
  text-align: right;
}

nav#page-images li[data-index=""] {
  visibility: hidden;
}

nav#page-projects {
  display: none;
}

nav#details {
  grid-column-start: right;
  align-self: end;
  text-align: right;
}



/* Gallery */

div#gallery {
  z-index: -1;
  position: fixed;
  top: 0;
  left: 0;
}

div#gallery li {
  width: 100vw;
  height: 100vh;
  position: absolute;

  transition: opacity .25s ease;
}

div#gallery img, div#gallery iframe {
  max-width: calc(100vh - 4rem);
  max-height: calc(100vh - 4rem);

  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

div#gallery li:not(.viewing) {
  opacity: 0;
}

div#gallery li.full img {
  width: 100%;
  height: 100%;
  max-height: none;
  max-width: none;
  object-fit: cover;
}

div#gallery li div {
  position: absolute;
  top: 50%;
  left: 50%;
}

p#waiting {
  z-index: -100;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  font-size: 2rem;
  line-height: 0;
  color: var(--c-line);
}

